--- a/index.html
+++ b/index.html
@@ -66,7 +66,38 @@
       <div class="content flex">
         <nav class="side-nav__nav">
           <ul class="side-nav__list">
-            <li class="side-nav__item"><a href="#" class="nav__link"></a></li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+                Hotel</a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                </svg>
+                Flight</a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                Car Rental</a
+              >
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use>
+                </svg>
+                Tours</a
+              >
+            </li>
           </ul>
         </nav>
 
