add basic side nav styling

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </header>
 
       <div class="content flex">
-        <nav class="side-nav__nav">
+        <nav class="side-nav">
           <ul class="side-nav__list">
             <li class="side-nav__item">
               <a href="#" class="side-nav__link">
