--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="content flex">
         <nav class="side-nav">
           <ul class="side-nav__list">
-            <li class="side-nav__item">
+            <li class="side-nav__item side-nav__item--active">
               <a href="#" class="side-nav__link">
                 <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-home"></use>
