add gallery and overview HTML

--- a/index.html
+++ b/index.html
@@ -103,8 +103,58 @@
 
         <main>
           <article class="hotel">
-            <section class="hotel__images">images</section>
-            <section class="hotel__hotel">hotel</section>
+            <div class="gallery">
+              <img
+                src="img/hotel-1.jpg"
+                alt="hotel image"
+                class="gallery__img"
+              />
+
+              <img
+                src="img/hotel-2.jpg"
+                alt="hotel image"
+                class="gallery__img"
+              />
+
+              <img
+                src="img/hotel-3.jpg"
+                alt="hotel image"
+                class="gallery__img"
+              />
+            </div>
+
+            <div class="overview">
+              <h1 class="heading-primary">Hotel Las Palmas</h1>
+              <div class="overview__stars">
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+              </div>
+
+              <div class="overview__location">
+                <svg class="overview__icon-star">
+                  <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                </svg>
+                <a href="#" class="overview__location-link"></a>
+              </div>
+
+              <div class="overview__rating">
+                <span class="over__rating-average">8.6</span>
+                <span class="over__rating-count">429 Votes</span>
+              </div>
+            </div>
             <section class="hotel__testimonies"></section>
             <section class="hotel__cta"></section>
           </article>
