finish overview styling

--- a/index.html
+++ b/index.html
@@ -124,35 +124,40 @@
             </div>
 
             <div class="overview">
-              <h1 class="heading-primary">Hotel Las Palmas</h1>
-              <div class="overview__stars">
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
+              <div class="flex-group flex-gap--md-1">
+                <h1 class="heading-primary">Hotel Las Palmas</h1>
+                <div class="overview__stars">
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                  </svg>
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                  </svg>
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                  </svg>
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                  </svg>
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                  </svg>
+                </div>
               </div>
+              <div class="flex-group flex-gap--md-2">
+                <div class="overview__location">
+                  <svg class="overview__icon-star">
+                    <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                  </svg>
+                  <a href="#" class="overview__location-link"
+                    >Albufeira, Portugal</a
+                  >
+                </div>
 
-              <div class="overview__location">
-                <svg class="overview__icon-star">
-                  <use xlink:href="img/sprite.svg#icon-location-pin"></use>
-                </svg>
-                <a href="#" class="overview__location-link"></a>
-              </div>
-
-              <div class="overview__rating">
-                <span class="over__rating-average">8.6</span>
-                <span class="over__rating-count">429 Votes</span>
+                <div class="overview__rating">
+                  <span class="overview__rating-average">8.6</span>
+                  <span class="overview__rating-count">429 Votes</span>
+                </div>
               </div>
             </div>
             <section class="hotel__testimonies"></section>
