--- a/index.html
+++ b/index.html
@@ -160,8 +160,123 @@
                 </div>
               </div>
             </div>
-            <section class="hotel__testimonies"></section>
-            <section class="hotel__cta"></section>
+
+            <div class="hotel-content">
+              <div class="details">
+                <div class="details__description">
+                  <div class="description-box">
+                    <p class="paragraph">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Animi nisi dignissimos debitis ratione sapiente saepe.
+                      Accusantium cumque, quas, ut corporis incidunt deserunt
+                      quae architecto voluptate.
+                    </p>
+                    <p class="paragraph">
+                      Accusantium cumque, quas, ut corporis incidunt deserunt
+                      quae architecto voluptate delectus, inventore iure aliquid
+                      aliquam.
+                    </p>
+                  </div>
+                </div>
+                <div class="description-box">
+                  <ul class="description__list">
+                    <li class="description__item">Close to the beach</li>
+                    <li class="description__item">Free airport shuttle</li>
+                    <li class="description__item">
+                      Air conditioning and heating
+                    </li>
+                    <li class="description__item">We speak all languages</li>
+
+                    <li class="description__item">Breakfast included</li>
+                    <li class="description__item">Free wifi in all rooms</li>
+                    <li class="description__item">Pets allowed</li>
+                    <li class="description__item">Perfect for families</li>
+                  </ul>
+                </div>
+
+                <div class="description-box">
+                  <span class="description__recommendation"
+                    >Lucy and 3 other friends recommend this hotel.
+                  </span>
+                  <div class="description__recommed-people">
+                    <img
+                      src="img/user-3.jpg"
+                      alt="picture of recommender"
+                      class="descripton__recommend-img"
+                    />
+
+                    <img
+                      src="img/user-4.jpg"
+                      alt="picture of recommender"
+                      class="descripton__recommend-img"
+                    />
+
+                    <img
+                      src="img/user-5.jpg"
+                      alt="picture of recommender"
+                      class="descripton__recommend-img"
+                    />
+
+                    <img
+                      src="img/user-6.jpg"
+                      alt="picture of recommender"
+                      class="descripton__recommend-img"
+                    />
+                  </div>
+                </div>
+                <div class="details__reviews">
+                  <div class="review">
+                    <blockquote class="review__text">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Fuga doloremque architecto dicta animi, totam, itaque
+                      officia ex.
+                    </blockquote>
+
+                    <div class="review-details">
+                      <img
+                        src="img/user-1.jpg"
+                        alt="user photo"
+                        class="review__img"
+                      />
+                      <div class="flex-item">
+                        <span class="review__user">Nick Smith</span>
+                        <span class="review__dates">Feb 23rd, 2017</span>
+                      </div>
+                      <span class="review__score">7.8</span>
+                    </div>
+                  </div>
+
+                  <div class="review">
+                    <blockquote class="review__text">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Fuga doloremque architecto dicta animi.
+                    </blockquote>
+
+                    <div class="review-details">
+                      <img
+                        src="img/user-2.jpg"
+                        alt="user photo"
+                        class="review__img"
+                      />
+                      <div class="flex-item">
+                        <span class="review__user">Marry Thomas</span>
+                        <span class="review__dates">Sep 13th, 2017</span>
+                      </div>
+                      <span class="review__score">9.3</span>
+                    </div>
+                  </div>
+
+                  <a href="#" class="review__show-all">Show all &rarr;</a>
+                </div>
+              </div>
+              <div class="hotel__cta">
+                <h2 class="cta__book-now">
+                  GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
+                </h2>
+
+              <a href="btn-cta">Book Now</a>
+              </div>
+            </div>
           </article>
         </main>
       </div>
