--- a/index.html
+++ b/index.html
@@ -177,51 +177,51 @@
                       aliquam.
                     </p>
                   </div>
-                </div>
-                <div class="description-box">
-                  <ul class="description__list">
-                    <li class="description__item">Close to the beach</li>
-                    <li class="description__item">Free airport shuttle</li>
-                    <li class="description__item">
-                      Air conditioning and heating
-                    </li>
-                    <li class="description__item">We speak all languages</li>
+                  <div class="description-box">
+                    <ul class="description__list">
+                      <li class="description__item">Close to the beach</li>
+                      <li class="description__item">Free airport shuttle</li>
+                      <li class="description__item">
+                        Air conditioning and heating
+                      </li>
+                      <li class="description__item">We speak all languages</li>
 
-                    <li class="description__item">Breakfast included</li>
-                    <li class="description__item">Free wifi in all rooms</li>
-                    <li class="description__item">Pets allowed</li>
-                    <li class="description__item">Perfect for families</li>
-                  </ul>
-                </div>
+                      <li class="description__item">Breakfast included</li>
+                      <li class="description__item">Free wifi in all rooms</li>
+                      <li class="description__item">Pets allowed</li>
+                      <li class="description__item">Perfect for families</li>
+                    </ul>
+                  </div>
 
-                <div class="description-box">
-                  <span class="description__recommendation"
-                    >Lucy and 3 other friends recommend this hotel.
-                  </span>
-                  <div class="description__recommed-people">
-                    <img
-                      src="img/user-3.jpg"
-                      alt="picture of recommender"
-                      class="descripton__recommend-img"
-                    />
+                  <div class="description-box">
+                    <span class="description__recommendation"
+                      >Lucy and 3 other friends recommend this hotel.
+                    </span>
+                    <div class="description__recommed-people">
+                      <img
+                        src="img/user-3.jpg"
+                        alt="picture of recommender"
+                        class="descripton__recommend-img"
+                      />
 
-                    <img
-                      src="img/user-4.jpg"
-                      alt="picture of recommender"
-                      class="descripton__recommend-img"
-                    />
+                      <img
+                        src="img/user-4.jpg"
+                        alt="picture of recommender"
+                        class="descripton__recommend-img"
+                      />
 
-                    <img
-                      src="img/user-5.jpg"
-                      alt="picture of recommender"
-                      class="descripton__recommend-img"
-                    />
+                      <img
+                        src="img/user-5.jpg"
+                        alt="picture of recommender"
+                        class="descripton__recommend-img"
+                      />
 
-                    <img
-                      src="img/user-6.jpg"
-                      alt="picture of recommender"
-                      class="descripton__recommend-img"
-                    />
+                      <img
+                        src="img/user-6.jpg"
+                        alt="picture of recommender"
+                        class="descripton__recommend-img"
+                      />
+                    </div>
                   </div>
                 </div>
                 <div class="details__reviews">
@@ -258,7 +258,7 @@
                         alt="user photo"
                         class="review__img"
                       />
-                      <div class="flex-item">
+                      <div class="flex-group">
                         <span class="review__user">Marry Thomas</span>
                         <span class="review__dates">Sep 13th, 2017</span>
                       </div>
@@ -274,7 +274,7 @@
                   GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
                 </h2>
 
-              <a href="btn-cta">Book Now</a>
+                <a href="btn-cta">Book Now</a>
               </div>
             </div>
           </article>
