finish description styling

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
             <div class="hotel-content">
               <div class="details">
-                <div class="details__description">
+                <div class="description">
                   <div class="description-box">
                     <p class="paragraph">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -193,33 +193,33 @@
                     </ul>
                   </div>
 
-                  <div class="description-box">
-                    <span class="description__recommendation"
+                  <div class="description-box description__recommend">
+                    <span class="description__recommend-text"
                       >Lucy and 3 other friends recommend this hotel.
                     </span>
-                    <div class="description__recommed-people">
+                    <div class="description__recommend-list">
                       <img
                         src="img/user-3.jpg"
                         alt="picture of recommender"
-                        class="descripton__recommend-img"
+                        class="description__recommend-img"
                       />
 
                       <img
                         src="img/user-4.jpg"
                         alt="picture of recommender"
-                        class="descripton__recommend-img"
+                        class="description__recommend-img"
                       />
 
                       <img
                         src="img/user-5.jpg"
                         alt="picture of recommender"
-                        class="descripton__recommend-img"
+                        class="description__recommend-img"
                       />
 
                       <img
                         src="img/user-6.jpg"
                         alt="picture of recommender"
-                        class="descripton__recommend-img"
+                        class="description__recommend-img"
                       />
                     </div>
                   </div>
