finish reviews section

--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
                   <svg class="overview__icon-star">
                     <use xlink:href="img/sprite.svg#icon-location-pin"></use>
                   </svg>
-                  <a href="#" class="overview__location-link"
-                    >Albufeira, Portugal</a
-                  >
+                  <a href="#" class="btn btn--sm">Albufeira, Portugal</a>
                 </div>
 
                 <div class="overview__rating">
@@ -225,48 +223,48 @@
                   </div>
                 </div>
                 <div class="details__reviews">
-                  <div class="review">
+                  <figure class="review">
                     <blockquote class="review__text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Fuga doloremque architecto dicta animi, totam, itaque
                       officia ex.
                     </blockquote>
 
-                    <div class="review-details">
+                    <figcaption class="review__details">
                       <img
                         src="img/user-1.jpg"
                         alt="user photo"
                         class="review__img"
                       />
-                      <div class="flex-item">
+                      <div class="review__user-box">
                         <span class="review__user">Nick Smith</span>
-                        <span class="review__dates">Feb 23rd, 2017</span>
+                        <span class="review__date">Feb 23rd, 2017</span>
                       </div>
                       <span class="review__score">7.8</span>
-                    </div>
-                  </div>
+                    </figcaption>
+                  </figure>
 
-                  <div class="review">
+                  <figure class="review">
                     <blockquote class="review__text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Fuga doloremque architecto dicta animi.
                     </blockquote>
 
-                    <div class="review-details">
+                    <figcaption class="review__details">
                       <img
                         src="img/user-2.jpg"
                         alt="user photo"
                         class="review__img"
                       />
-                      <div class="flex-group">
+                      <div class="review__user-box">
                         <span class="review__user">Marry Thomas</span>
-                        <span class="review__dates">Sep 13th, 2017</span>
+                        <span class="review__date">Sep 13th, 2017</span>
                       </div>
                       <span class="review__score">9.3</span>
-                    </div>
-                  </div>
+                    </figcaption>
+                  </figure>
 
-                  <a href="#" class="review__show-all">Show all &rarr;</a>
+                  <a href="#" class="btn btn--md">Show all &rarr;</a>
                 </div>
               </div>
               <div class="hotel__cta">
@@ -274,7 +272,7 @@
                   GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
                 </h2>
 
-                <a href="btn-cta">Book Now</a>
+                <a class="btn" href="#">Book Now</a>
               </div>
             </div>
           </article>
