--- a/index.html
+++ b/index.html
@@ -267,15 +267,20 @@
                   <a href="#" class="btn btn--md">Show all &rarr;</a>
                 </div>
               </div>
-              <div class="hotel__cta">
-                <h2 class="cta__book-now">
-                  GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
-                </h2>
-
-                <a class="btn" href="#">Book Now</a>
-              </div>
             </div>
           </article>
+          <div class="cta">
+            <h2 class="cta__book-now">
+              GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
+            </h2>
+
+            <a class="cta__btn" href="#">
+              <div class="cta__btn-face cta__btn-face--front">Book Now</div>
+              <div class="cta__btn-face cta__btn-face--back">
+                Only 4 Rooms Left
+              </div>
+            </a>
+          </div>
         </main>
       </div>
     </div>
