--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </div>
               <div class="flex-group flex-gap--md-2">
                 <div class="overview__location">
-                  <svg class="overview__icon-star">
+                  <svg class="overview__icon-location">
                     <use xlink:href="img/sprite.svg#icon-location-pin"></use>
                   </svg>
                   <a href="#" class="btn btn--sm">Albufeira, Portugal</a>
